feat: Added Discord Status Embed feat: Added new Discord Slash Commands - /togglejoinmessage <true/false> - /toggleleavemessage <true/false> style: Cleaned Code, moved everything to seperate class, reduced redundancy style: Added Dictionary Class for proper config.yml handling

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,10 @@
 discordToken: "your-discord-token-here"
-updatesChannelID: "your-updates-channel-id-here"
 discordServerID: "your-discord-server-id-here"
+updatesChannelID: "your-updates-channel-id-here"
+statusChannelID: "your-embed-channel-id-here"
+statusMessageID: "your-embed-message-id-here"
 
+sendJoinMessage: true
+sendLeaveMessage: true
 joinMessage: "`{player}` joined the Server!"
 leaveMessage: "`{player}` left the Server!"
